Fix bus selector overflow

--- a/src/components/bus-selector/bus-selector.less
+++ b/src/components/bus-selector/bus-selector.less
@@ -37,6 +37,11 @@
       font-size: 1.2rem;
       padding-left: 1.8rem;
     }
+
+    .bus-groups-wrapper
+    {
+      overflow: auto;
+    }
   }
   .menu.opened
   {
